# rp2350-lfi

./: .gitmodules  LICENSE  README.md  binary_patcher.py  configure_glasgow.py  ctrl.py  pyproject.toml
arbitrary_firmware/: CMakeLists.txt  firmware.c  memmap_shifted.ld
rp2350_lfi/: __init__.py  cypress_usb.py  delta_stage.py  fpga_controller.py  laser_pulser.py
rp2350_lfi/assets/: jumper.s
